--- a/TareaEntregableUD3/nbproject/project.properties
+++ b/TareaEntregableUD3/nbproject/project.properties
@@ -75,7 +75,7 @@ main.class=tareaentregableud3.TareaEntregableUD3Ej01
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_11
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
