--- a/UD3_Condicionales/nbproject/project.properties
+++ b/UD3_Condicionales/nbproject/project.properties
@@ -77,7 +77,7 @@ main.class=ud3_condicionales.UD3_Condicionales_Ej1
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_11
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
