--- a/UD5_Funciones/nbproject/project.properties
+++ b/UD5_Funciones/nbproject/project.properties
@@ -77,7 +77,7 @@ main.class=ud5_funciones.Ej_1
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_11
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
