--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@
 /POO_Ejercicios_I/nbproject/private/
 /POO_Ejercicios_I/build/
 /POO_ClaseRectangulo/build/
+/UD6_POO_Ej_II_Ej_1/nbproject/private/
+/UD6_POO_Ej_II_Ej_1/build/
+/UD6_POO_Ej_II/nbproject/private/
+/UD6_POO_Ej_II/build/
