--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@
 /UD6_POO_Ej_II_Ej_1/build/
 /UD6_POO_Ej_II/nbproject/private/
 /UD6_POO_Ej_II/build/
+/Entregable_UD7_Blibi-OTK/nbproject/private/
+/Entregable_UD7_Blibi-OTK/build/
+/Entregable_UD7_Blibi-OTK/dist/
