--- a/Entregable_UD7_Blibi-OTK/nbproject/project.properties
+++ b/Entregable_UD7_Blibi-OTK/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=UD6_POO_Ej_II
-application.vendor=USER
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -29,11 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/UD6_POO_Ej_II.jar
+dist.jar=${dist.dir}/Entregable_UD7_Blibi-OTK.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/UD6_POO_Ej_II
-endorsed.classpath=
+dist.jlink.output=${dist.jlink.dir}/Entregable_UD7_Blibi-OTK
 excludes=
 includes=**
 jar.compress=false
@@ -72,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=UD6_POO_Ej_II
-main.class=Main.UD6_POO_Ej_II_Ej_1
+jlink.launcher.name=Entregable_UD7_Blibi-OTK
+main.class=entregable_ud7_blibi.otk.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
