--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@
 /Entregable_UD7_Blibi-OTK/nbproject/private/
 /Entregable_UD7_Blibi-OTK/build/
 /Entregable_UD7_Blibi-OTK/dist/
+/Entregable_07/nbproject/private/
+/Entregable_07/build/
