--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@
 /Entregable_UD7_Blibi-OTK/dist/
 /Entregable_07/nbproject/private/
 /Entregable_07/build/
+/POO_Libres/nbproject/private/
+/POO_Libres/build/
