--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@
 /Entregable_07/build/
 /POO_Libres/nbproject/private/
 /POO_Libres/build/
+/UD7_Agenda/nbproject/private/
+/UD7_Agenda/build/
+/Entregable_07_1`bis/nbproject/private/
+/Entregable_07_1`bis/build/
