--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@
 /UD7_Agenda/build/
 /Entregable_07_1`bis/nbproject/private/
 /Entregable_07_1`bis/build/
+/Repasos/nbproject/private/
+/Repasos/build/
+/Entregable_07_1`bis/dist/
