Examen segunda resuelto

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@
 /UD7_Agenda/build/
 /Entregable_07_1`bis/nbproject/private/
 /Entregable_07_1`bis/build/
+/Examen_Javier_Armesto/nbproject/private/
+/Examen_Javier_Armesto/build/
