--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@
 /Repasos/nbproject/private/
 /Repasos/build/
 /Entregable_07_1`bis/dist/
+/Repaso_Examen_Segunda/nbproject/private/
+/Repaso_Examen_Segunda/build/
+/Examen_Javier_Armesto/build/
