--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@
 /Repaso_Examen_Segunda/nbproject/private/
 /Repaso_Examen_Segunda/build/
 /Examen_Javier_Armesto/build/
+/Solucion_Ex_Segunda/nbproject/private/
+/Solucion_Ex_Segunda/build/
