--- a/Solucion_Ex_Segunda/nbproject/project.properties
+++ b/Solucion_Ex_Segunda/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Repaso_Examen_Segunda.jar
+dist.jar=${dist.dir}/Solucion_Ex_Segunda.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Repaso_Examen_Segunda
+dist.jlink.output=${dist.jlink.dir}/Solucion_Ex_Segunda
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Repaso_Examen_Segunda
-main.class=problema2.Main
+jlink.launcher.name=Solucion_Ex_Segunda
+main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
