--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@
 /Examen_Javier_Armesto/build/
 /Solucion_Ex_Segunda/nbproject/private/
 /Solucion_Ex_Segunda/build/
+/Ensayos_01/nbproject/private/
+/Clases_paso_a_paso/nbproject/private/
+/Clases_paso_a_paso/build/
