--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@
 /Ensayos_01/nbproject/private/
 /Clases_paso_a_paso/nbproject/private/
 /Clases_paso_a_paso/build/
+/UD8_Excepciones/nbproject/private/
+/UD8_Excepciones/build/
