--- a/UD8_Excepciones/nbproject/project.properties
+++ b/UD8_Excepciones/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Repaso_Examen_Segunda
-application.vendor=USER
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -29,11 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Repaso_Examen_Segunda.jar
+dist.jar=${dist.dir}/UD8_Excepciones.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Repaso_Examen_Segunda
-endorsed.classpath=
+dist.jlink.output=${dist.jlink.dir}/UD8_Excepciones
 excludes=
 includes=**
 jar.compress=false
@@ -72,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Repaso_Examen_Segunda
-main.class=problema2.Main
+jlink.launcher.name=UD8_Excepciones
+main.class=UD8_Excepciones.Ejercicio_A8
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
