--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,8 @@
 /Clases_paso_a_paso/build/
 /UD8_Excepciones/nbproject/private/
 /UD8_Excepciones/build/
+/FlixNet/nbproject/private/
+/FlixNet/build/
+/Ejercicios_POO_II_bis/nbproject/private/
+/Ejercicios_POO_II_bis/build/
+/FlixNet_bis/nbproject/private/
