Finalizada entrega FlixNet

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,6 @@
 /Ejercicios_POO_II_bis/build/
 /FlixNet_bis/nbproject/private/
 /FlixNet/dist/
+/FlixNet_B/nbproject/private/
+/Netflix_A/nbproject/private/
+/FlixNet_B/build/
