--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,6 @@
 /FlixNet_B/nbproject/private/
 /Netflix_A/nbproject/private/
 /FlixNet_B/build/
+/Entrega_FlixNet/nbproject/private/
+/Ejercicios_ficheros_Casa/nbproject/private/
+/Ejercicios_ficheros_Casa/build/
