--- a/Entrega_FlixNet/nbproject/project.properties
+++ b/Entrega_FlixNet/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/FlixNet_B.jar
+dist.jar=${dist.dir}/Entrega_FlixNet.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/FlixNet_B
+dist.jlink.output=${dist.jlink.dir}/Entrega_FlixNet
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=FlixNet_B
+jlink.launcher.name=Entrega_FlixNet
 main.class=Main
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
