--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,6 @@
 /Entrega_FlixNet/nbproject/private/
 /Ejercicios_ficheros_Casa/nbproject/private/
 /Ejercicios_ficheros_Casa/build/
+/Mini_Terminal_Linux/nbproject/private/
+/Terminal_Linux/nbproject/private/
+/Terminal_Linux/build/
