--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,6 @@
 /Mini_Terminal_Linux/nbproject/private/
 /Terminal_Linux/nbproject/private/
 /Terminal_Linux/build/
+/Terminal_Linux_B/nbproject/private/
+/Terminal_Linux_B/build/
+/Terminal_Linux_C/nbproject/private/
