--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,4 @@
 /Terminal_Linux_B/nbproject/private/
 /Terminal_Linux_B/build/
 /Terminal_Linux_C/nbproject/private/
+/JavaApplication33/nbproject/private/
