--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,7 @@
 /Terminal_Linux_B/build/
 /Terminal_Linux_C/nbproject/private/
 /JavaApplication33/nbproject/private/
+/Entrega_FlixNet_1/nbproject/private/
+/Entrega_FlixNet/build/
+/Entrega_FlixNet_Fr/nbproject/private/
+/Entrega_FlixNet_Fr/build/
