--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,6 @@
 /Entrega_FlixNet/build/
 /Entrega_FlixNet_Fr/nbproject/private/
 /Entrega_FlixNet_Fr/build/
+/Entrega_FlixNet_Fr_12/nbproject/private/
+/Entrega_FlixNet_Fr_12/build/
+/Entrega_FlixNet_Paso2/nbproject/private/
