--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@
 /Entrega_FlixNet_Fr_12/nbproject/private/
 /Entrega_FlixNet_Fr_12/build/
 /Entrega_FlixNet_Paso2/nbproject/private/
+/Entrega_FlixNet_Fr_12/dist/
