--- a/Entrega_FlixNet_Fr_12/nbproject/project.properties
+++ b/Entrega_FlixNet_Fr_12/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Entrega_FlixNet_Paso_1
+application.vendor=javarmbar
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,10 +33,13 @@ dist.jar=${dist.dir}/Entrega_FlixNet_Paso_1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Entrega_FlixNet_Paso_1
+endorsed.classpath=
 excludes=
+file.reference.mysql-connector-j-8.4.0.jar=/home/javarmbar/Escriptori/mysql-connector-j-8.4.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-j-8.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -74,7 +78,7 @@ jlink.launcher.name=Entrega_FlixNet_Paso_1
 main.class=MainAntiguo
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
-platform.active=default_platform
+platform.active=JDK_11
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
