--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,5 @@
 /Entrega_FlixNet_Fr_12/build/
 /Entrega_FlixNet_Paso2/nbproject/private/
 /Entrega_FlixNet_Fr_12/dist/
+/Repaso tercera/nbproject/private/
+/Repaso tercera/build/
