--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,7 @@
 /Entrega_FlixNet_Fr_12/dist/
 /Repaso tercera/nbproject/private/
 /Repaso tercera/build/
+/EntregaFlixNet_v1/nbproject/private/
+/EntregaFlixNet_v1/build/
+/FlixNet_v1/nbproject/private/
+/FlixNet_v1/build/
