--- a/Entrega_FlixNet_Fr_12/nbproject/project.properties
+++ b/Entrega_FlixNet_Fr_12/nbproject/project.properties
@@ -78,7 +78,7 @@ jlink.launcher.name=Entrega_FlixNet_Paso_1
 main.class=MainAntiguo
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
-platform.active=JDK_11
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
