--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,5 @@
 /FlixNet_v1/nbproject/private/
 /FlixNet_v1/build/
 /Entrega_FlixNet_Paso1/nbproject/private/
+/Entrega_FlixNet_Paso1/build/
+/Entrega_FlixNet_Paso1/dist/
