--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,5 @@
 /Entrega_FlixNet_Paso1/nbproject/private/
 /Entrega_FlixNet_Paso1/build/
 /Entrega_FlixNet_Paso1/dist/
+/Entrega_FlixNet_Paso2/build/
+/Entrega_FlixNet_Paso0/nbproject/private/
