--- a/Entrega_FlixNet_Paso2/nbproject/project.properties
+++ b/Entrega_FlixNet_Paso2/nbproject/project.properties
@@ -35,11 +35,10 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Entrega_FlixNet_Paso2
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.4.0.jar=home/javarmbar/Escriptori/mysql-connector-j-8.4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.4.0.jar}
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
