--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,5 @@
 /Entrega_FlixNet_Paso1/dist/
 /Entrega_FlixNet_Paso2/build/
 /Entrega_FlixNet_Paso0/nbproject/private/
+/EntregaFinalNetFlix/nbproject/private/
+/EntregaFinalNetFlix/build/
