--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,7 @@
 /Entrega_FlixNet_Paso0/nbproject/private/
 /EntregaFinalNetFlix/nbproject/private/
 /EntregaFinalNetFlix/build/
+/Repaso_Ordinaria/nbproject/private/
+/Repaso_Ordinaria/build/
+/ExamenTercera/nbproject/private/
+/ExamenTercera/build/
