--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,7 @@
 /Repaso_Ordinaria/build/
 /ExamenTercera/nbproject/private/
 /ExamenTercera/build/
+/UD4_Strings/nbproject/private/
+/UD4_Strings/build/
+/Ordinaria/nbproject/private/
+/Ordinaria/build/
