--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,8 @@
 /UD4_Strings/build/
 /Ordinaria/nbproject/private/
 /Ordinaria/build/
+/Ficheros_Repaso/nbproject/private/
+/Main/nbproject/private/
+/Main/build/
+/Iterador/nbproject/private/
+/Iterador/build/
