--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,7 @@
 /Main/build/
 /Iterador/nbproject/private/
 /Iterador/build/
+/EjercicioMatrices/nbproject/private/
+/EjercicioMatrices/build/
+/PracticaFutbol/nbproject/private/
+/PracticaFutbol/build/
