--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,15 @@
 /EjercicioMatrices/build/
 /PracticaFutbol/nbproject/private/
 /PracticaFutbol/build/
+/Proactividad01/nbproject/private/
+/Proactividad01/build/
+/Proactividad01/dist/
+/Proactividad02/target/
+/JavaApplication1/nbproject/private/
+/HolaMund/nbproject/private/
+/HolaMund/build/
+/HolaMund/dist/
+/Hola/nbproject/private/
+/Hola/build/
+/Simulacro/nbproject/private/
+/Simulacro/build/
