--- a/Hola/nbproject/project.properties
+++ b/Hola/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Examen_Armesto_Javier
-application.vendor=examen3
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -29,11 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Examen_Armesto_Javier.jar
+dist.jar=${dist.dir}/Hola.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Examen_Armesto_Javier
-endorsed.classpath=
+dist.jlink.output=${dist.jlink.dir}/Hola
 excludes=
 includes=**
 jar.compress=false
@@ -46,8 +44,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=11
-javac.target=11
+javac.source=23
+javac.target=23
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -72,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Examen_Armesto_Javier
-main.class=examen_armesto_javier.Examen_Armesto_Javier
+jlink.launcher.name=Hola
+main.class=hola.Hola
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
