Entornos Villar Domingo

--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,11 @@
 /Hola/build/
 /Simulacro/nbproject/private/
 /Simulacro/build/
+/Calculadora/nbproject/private/
+/Calculadora/build/
+/calc/nbproject/private/
+/calc/build/
+/MiCalculadora/nbproject/private/
+/MiCalculadora/build/
+/MiCalculadoraBis/nbproject/private/
+/MiCalculadoraBis/build/
