--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,5 @@
 /MiCalculadora/build/
 /MiCalculadoraBis/nbproject/private/
 /MiCalculadoraBis/build/
+/HolaMundoMaven/target/
+/HolaMundoMaven/nbproject/
