--- a/HolaMundo/nbproject/project.properties
+++ b/HolaMundo/nbproject/project.properties
@@ -40,12 +40,14 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
+    ${libs.junit_5.classpath}:\
     ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=
+javac.modulepath=\
+    ${libs.junit_4.classpath}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
@@ -53,7 +55,8 @@ javac.source=11
 javac.target=11
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_5.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
