--- a/MiCalculadoraBis/nbproject/project.properties
+++ b/MiCalculadoraBis/nbproject/project.properties
@@ -1,33 +1,24 @@
+#Sun Mar 16 13:22:00 CET 2025
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=MiCalculadoraBis
-application.vendor=Mar\u00eda
+application.vendor=Mar\u00EDa
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
-# This directory is removed when the project is cleaned:
 build.dir=build
 build.generated.dir=${build.dir}/generated
 build.generated.sources.dir=${build.dir}/generated-sources
-# Only compile against the classpath explicitly listed here:
 build.sysclasspath=ignore
 build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
-# Uncomment to specify the preferred debugger connection transport:
-#debug.transport=dt_socket
-debug.classpath=\
-    ${run.classpath}
-debug.modulepath=\
-    ${run.modulepath}
-debug.test.classpath=\
-    ${run.test.classpath}
-debug.test.modulepath=\
-    ${run.test.modulepath}
-# Files in build.classes.dir which should be excluded from distribution jar
+debug.classpath=${run.classpath}
+debug.modulepath=${run.modulepath}
+debug.test.classpath=${run.test.classpath}
+debug.test.modulepath=${run.test.modulepath}
 dist.archive.excludes=
-# This directory is removed when the project is cleaned:
 dist.dir=dist
 dist.jar=${dist.dir}/MiCalculadoraBis.jar
 dist.javadoc.dir=${dist.dir}/javadoc
@@ -37,27 +28,23 @@ endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${libs.junit_4.classpath}
-# Space-separated list of extra javac options
+javac.classpath=${libs.junit_4.classpath}
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=\
-    ${libs.junit_5.classpath}
+javac.modulepath=${libs.junit_5.classpath}
 javac.processormodulepath=
-javac.processorpath=\
-    ${javac.classpath}
+javac.processorpath=${javac.classpath}
 javac.source=23
 javac.target=23
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_5.classpath}
-javac.test.modulepath=\
-    ${javac.modulepath}
-javac.test.processorpath=\
-    ${javac.test.classpath}
+    ${libs.junit_5.classpath}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
+javac.test.modulepath=${javac.modulepath}
+javac.test.processorpath=${javac.test.classpath}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
@@ -70,29 +57,19 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-# The jlink additional root modules to resolve
 jlink.additionalmodules=
-# The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=MiCalculadoraBis
+junit.selected.version=4
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
+run.classpath=${javac.classpath}\:${build.classes.dir}
 run.jvmargs=
-run.modulepath=\
-    ${javac.modulepath}
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-run.test.modulepath=\
-    ${javac.test.modulepath}
+run.modulepath=${javac.modulepath}
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.modulepath=${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
